--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sparticuz/chromium-min": "^133.0.0",
+    "cloudinary": "^2.6.0",
     "next": "15.2.3",
     "puppeteer-core": "^24.3.1",
     "react": "^19.0.0",
