--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sparticuz/chromium-min": "^133.0.0",
     "cloudinary": "^2.6.0",
     "next": "15.2.3",
+    "puppeteer": "^24.4.0",
     "puppeteer-core": "^24.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
